--- a/weatherApp/src/css/output.css
+++ b/weatherApp/src/css/output.css
@@ -786,6 +786,10 @@ video {
   width: 66.666667%;
 }
 
+.w-72 {
+  width: 18rem;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -1035,6 +1039,16 @@ video {
   padding-right: 2rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -1132,6 +1146,10 @@ video {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-\[8px\] {
+  font-size: 8px;
 }
 
 .font-medium {
