--- a/tkb/src/css/app.css
+++ b/tkb/src/css/app.css
@@ -184,8 +184,9 @@ body{
     box-sizing:border-box;
     transform-style:preserve-3d;
     -webkit-transform-style:preserve-3d;
-
-    font-size: 13px;
+    font-size: 12px;
+    color: #ECECE7;
+    font-weight: 600;
   }
   
   .dot::after{
@@ -195,4 +196,26 @@ body{
     width: 3px;
     border-radius: 100%;
     background: red;
+  }
+
+  .banner{
+    text-align: center;
+    position: absolute;
+    transform: translateY(15px);
+    opacity: 0;
+    transition: 0.2s;
+  }
+  .banner-day{
+    background: #232227;
+    padding: 15px;
+    clip-path: polygon(0 35%, 50% 0, 100% 35%, 100% 100%, 0% 100%);
+    color: #ECECE7;
+    font-weight: 600;
+  }
+
+  .slide{
+    opacity: 1;
+    transform: translateY(-25px);
+    transition: 1s;
+    transition-delay: 0.7s;
   }
