--- a/tkb/src/css/app.css
+++ b/tkb/src/css/app.css
@@ -23,7 +23,7 @@ body{
     transform-style:preserve-3d;
     -webkit-transform-style:preserve-3d;
     transition:transform 1s ease;
-    cursor:pointer;
+    user-select: none;
   }
   .back, .front{
     border-radius:6px;
@@ -113,7 +113,9 @@ body{
   }
   #month{
     float:right;
-    font-size:10px;
+    margin-top: 10px;
+    width: 100px;
+    font-size:11px;
     color:#232227;
     font-family: 'Montserrat', sans-serif;
     font-weight:200;
