--- a/tkb/src/css/app.css
+++ b/tkb/src/css/app.css
@@ -142,6 +142,12 @@ body{
   }
   .orangeTr{
     color:#E76642;
+    text-transform: capitalize;
+  }
+  .sunday{
+    color: red;
+    font-size: 16px;
+    font-weight: 600;
   }
   .whiteTr{
     color:#ECECE7;
