--- a/tkb/src/css/app.css
+++ b/tkb/src/css/app.css
@@ -227,3 +227,61 @@ body{
     transition: 1s;
     transition-delay: 0.7s;
   }
+  
+  .blockInsert{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9;
+    width: auto;
+    display: none;
+  }
+  .labelFile{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #E76642;
+    cursor: pointer;
+    border-radius: 4px;
+    width: 250px;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    z-index: 10;
+    font-weight: 600;
+    color: #333;
+  }
+
+  .overlay.show, .blockInsert.show{
+    display: block;
+  }
+  .overlay{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #232227;
+    opacity: .8;
+    z-index: 9;
+  }
+
+  .logout{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    border: none;
+    outline: none;
+    background: transparent;
+    color: white;
+    cursor: pointer;
+  }
+  .logout:hover{
+    color: #E76642;
+    transition: .1s;
+    transform: scale(1.2);
+  }
